assets/sass/site/_common-structure.scss
body {
	font-family: $font-heading;
}
.clear {clear: both;}
.wrapper {
	width: 100%;
	margin: 0px auto;
	padding: 20px;
	
	@media screen and (min-width: $tabwidth) {
		width: 100%;
	}
	@media screen and (min-width: $deskwidth) {
		width: 1200px;
		padding: 0px;
	}
}

.content-area {
	width: 100%;
	margin: 0px auto;
	
	@media screen and (min-width: $tabwidth) {
		width: 66%;
		float: left;
		margin: 0;
	}
	@media screen and (min-width: $deskwidth) {
		/*width: 1200px;*/
	}
}

.widget-area {
	width: 100%;
	margin: 0px auto;
	
	@media screen and (min-width: $tabwidth) {
		width: 26%;
		float: right;
		margin: 0;
	}
	@media screen and (min-width: $deskwidth) {
		/*width: 1200px;*/
	}
}

/* Logo */
.elogo , h1.elogo {
	width: 300px;
	// background-image: url(images/logo.png);	
	margin: 10px auto;

	@media screen and (min-width: $tabwidth) {
		width: 300px;
		float: left;
		margin: 0;
	}
	@media screen and (min-width: $deskwidth) {
		/*width: 1200px;*/
	}
}
.logo a, h1.logo a {
	width: 300px;
	display: block;

	@media screen and (min-width: $tabwidth) {
		width: 300px;
	}
	@media screen and (min-width: $deskwidth) {
		/*width: 1200px;*/
	}
}
.site-footer {
	width: 100%;
	clear: both;
}
.parallax-window {
    min-height: 300px;
    background: transparent;
    @media screen and (min-width: $tabwidth) {
    	min-height: 300px;
    }
    @media screen and (min-width: $midwidth) {
    	min-height: 300px;
    }
    @media screen and (min-width: $deskwidth) {
    	min-height: 400px;
    }
    @media screen and (min-width: $largewidth) {
    	min-height: 700px;
    }
}
section.header {
	width: 100%;
	position: relative;
	padding: 0% 5% 5% 5%;
	 @media screen and (min-width: $tabwidth) {
	 	display: flex;
	 	flex-direction: row;
	 	justify-content: center;
	 	align-items: center;
	 }
	.elogo {
		width: 30%;
		margin: 0 auto;
		@media screen and (min-width: $tabwidth) {
			width: 20%;
			float: left;
			margin: 0;
		}
		img {
			width: 100%;
		}
	}
	.sitedesc {
		width: 100%;
		float: left;
		color: #fff;
		@media screen and (min-width: $tabwidth) {
			width: 50%;
			margin-left: 5%;
		}
		h1 {
			font-size: 7vw;
			line-height: 1.2;
			margin: 20px 0 20px 0;
			text-align: center;
			@media screen and (min-width: $tabwidth) {
				font-size: 4vw;
				text-align: left;
			}
		}
		.taglines {
			width: 100%;
			float: left;
			font-size: 4vw;
			@media screen and (min-width: $tabwidth) {
				font-size: 2vw;
			}
		
			
		}
	}
}
section.divider {
	width: 100%;
	background-color: #fff;
	
	clear: both;
	overflow: visible;
	.overlap-box {
		width: 80%;
		max-width: 1150px;
		margin: -150px auto 0 auto;
		padding: 40px;
		background-color: #fff;
		position: relative;
		z-index: 100;
		@media screen and (min-width: $tabwidth) {

		}
	}
	h2 {
		font-size: 8vw;
		width: auto;
		display: inline-block;
		position: relative;
		&:after {
			content: '';
			border-bottom: 3px solid $color-green;
			position: absolute;
			left: 40%;
			bottom: -20px;
			width: 25%;
		}
		@media screen and (min-width: $tabwidth) {
			font-size: 4vw;
		}
	}
	text-align: center;
	padding: 80px 0;
	// margin: -5rem auto -3.5rem auto;
	.our-divisions {
		width: 90%;
		
		
		
		background-color: #fff;
		
	}
}
section.companies {
	width: 100%;
	
	float: left;
	background-color: #fff;
	@media screen and (min-width: $tabwidth) {
		margin: -50px auto 0 auto;
	}
	@media screen and (min-width: $midwidth) {
		margin: -150px auto 20px auto;
		
	}
	@media screen and (min-width: $largewidth) {
		
		padding-bottom: 40px;
	}
	.compwrap {
		max-width: 1300px;
		margin: 0 auto;
	}
	.company {
		width: 100%;
		float: left;
		position: relative;
		overflow: hidden;
		margin: 0 0 30px 0;
		// border-bottom: 30px solid #fff;
		@media screen and (min-width: $tabwidth) {
			width: 50%;
			margin: 0;
			border: 20px solid #fff;
		}
		&:hover {
			.img {
				transform: scale(1.1);
			}
		}
		.overlay {
			width: 100%;
			height: 100%;
			position: absolute;
			top: 0;
			left: 0;
			background-color: rgba(#000, .6);
			opacity: 1;
			display: flex;
			flex-direction: column;
			justify-content: flex-end;
			@include transition(all ease .2s);
			z-index: 1;
			&.active {
				opacity: 0;
				// z-index: 1;
			}
			.elogo {
				width: 40%;
				margin: 0 auto;
				img {
					width: 100%;
				}
			}
			.small-desc {
				width: 100%;
				text-align: center;
				color: #fff;
				padding: 20px 0;
				@media screen and (min-width: $tabwidth) {
					padding: 5px 0;
				}
				@media screen and (min-width: $midwidth) {
					padding: 10px 0;
				}
				@media screen and (min-width: $midwidth) {
					padding: 20px 0;
				}
			}
		}
		.img {
			width: 100%;
			position: relative;
			line-height: 0;
			@include transition(all ease 3s);
			img {
				width: 100%;
			}
		}
		.desc {
			width: 100%;
			height:auto;
			position: absolute;
			z-index: 10;
			top: 20%;
			left: 0;
			color: #fff;
			padding:5%;
			line-height: 1.2;
			text-align: center;
			font-size: 8vw;
			background-color: rgba(#000, .7);
			// opacity: 0;
			transform: scale(0);
			@include transition(all ease .4s);
			@media screen and (min-width: $tabwidth) {
				font-size: 4vw;
			}
			p {
				margin: 0 0 20px 0;
			}
			&.active {
				// opacity: 1;
				transform: scale(1);
				// z-index: 1;
			}
		}
	}
}
a.button {
	width: auto;
	position: relative;
	z-index: 100000;
	display: inline-block;
	padding: 15px 25px;
	background-color: $color-yellow;
	border: 3px solid #fff;
	color: $color-green;
	margin: 20px 0 0 0;
	font-size: 4vw;
	text-decoration: none;
	@include transition(all ease .2s);
	transform: scale(1);
	@media screen and (min-width: $tabwidth) {
		font-size: 2vw;
	}
	&:hover {
		transform: scale(1.1);
	}
}
section.footer {
	padding: 5%;
	.footer-desc {
		color: #fff;
		max-width: 1250px;
		margin: 0 auto;
		@media screen and (min-width: $tabwidth) {

		}
		h3 {
			font-size: 8vw;
			margin: 20px 0;
			@media screen and (min-width: $tabwidth) {
				font-size: 3vw;
			}
			@media screen and (min-width: $largewidth) {
				font-size: 2vw;
			}
		}
		p {
			font-size: 4vw;
			@media screen and (min-width: $tabwidth) {
				font-size: 1.4vw;
			}
			@media screen and (min-width: $largewidth) {
				font-size: 1vw;
			}
		}
	}
	
}
.footerinfo {
	width: 100%;
	background-color: rgba(#000, 1);
	color: #fff;
	text-align: center;
	padding: 20px 0;
	font-size: 3vw;
	@media screen and (min-width: $tabwidth) {
		font-size: 1.4vw;
	}
	@media screen and (min-width: $deskwidth) {
		font-size: 1vw;
	}
	a {
		color: #fff;
		text-decoration: none;
	}

}

